--- a/public/styles/tablet2.css
+++ b/public/styles/tablet2.css
@@ -11,7 +11,8 @@
     }
     #text_of_event2 {
       position: relative;
-      left: 142px;
+      left: 72px;
+      width: 267px;
     }
     #text_of_event3 {
       position: relative;
