--- a/public/styles/tablet6.css
+++ b/public/styles/tablet6.css
@@ -3,6 +3,24 @@
         width: 730px;
         height: 1163px;
     }
+    .wrap_allTechno {
+      position: relative;
+      width: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+    }
+    .inside_cont_img {
+          width: 730px !important;
+          margin: 136px 0px 136px 0px;
+    }
+    .title_inside_techno {
+        position: relative;
+        top: -37px;
+    }
     .event-img {
         width: 704.8px;
         height: 220.05px;
