--- a/public/styles/style1.css
+++ b/public/styles/style1.css
@@ -65,6 +65,14 @@ body {
   position: absolute;
   top: 0;
 }
+#spacex {
+  position: relative;
+  top: -18px;
+}
+#google {
+  position: relative;
+  left: 43px;
+}
 .navigation-link {
   font-family: 'WorkSans-Regular', Verdana, sans-serif;
   font-style: normal;
