--- a/public/styles/tablet2.css
+++ b/public/styles/tablet2.css
@@ -6,6 +6,9 @@
     .footer {
         width: 730px;
     }
+    #eye2 {
+        width: 101px;
+    }
     .events__button > p:nth-child(2) {
       flex-basis: 27.8%;
     }
