--- a/public/styles/tablet5.css
+++ b/public/styles/tablet5.css
@@ -37,28 +37,21 @@
         margin-bottom: 4px;
     }
 }
-@media (min-width: 1946px) and (max-width: 2400px) {
+@media (min-width: 1914px) and (max-width: 2863px) {
   .wrap_wave {
-    -webkit-transform: scale(0.9);
-    -ms-transform: scale(0.9);
-        transform: scale(0.9);
-  }
-}
-@media (min-width: 1713px) and (max-width: 1946px) {
-  .wrap_wave {
-    -webkit-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-        transform: scale(0.8);
-  }
-}
-@media (min-width: 1504px) and (max-width: 1713px) {
-  .wrap_wave {
-    -webkit-transform: scale(0.7);
-    -ms-transform: scale(0.7);
-        transform: scale(0.7);
+    -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+         transform: scale(1.5);
   }
 }
 
+@media (min-width: 2863px) {
+  .wrap_wave {
+    -webkit-transform: scale(1.7);
+        -ms-transform: scale(1.7);
+         transform: scale(1.7);
+  }
+}
 
 @media (min-width: 945px) and (max-width: 1188px) {
   .wrap_wave {
