--- a/public/styles/tablet7.css
+++ b/public/styles/tablet7.css
@@ -50,7 +50,7 @@
         height: 50px;
     }
     .members__section2 {
-        height: 580px;
+        height: 453px;
     }
     .members__section2-title {
         font-size: 40px;
@@ -58,8 +58,42 @@
         margin-top: 80px;
     }
     .members__section2-list {
-        margin-top: 0px;
+        margin-top: -53px;
     }
+    #sp1 {
+      width: 185px;
+      left: -5px;
+    }
+    #sp2 {
+      width: 118px;
+      position: relative;
+      left: 23px;
+      top: -2px;
+  }
+  #sp3 {
+    width: 69px;
+    position: relative;
+    left: 54px;
+    top: -3px;
+  }
+  #sp4 {
+    width: 99px;
+    position: relative;
+    left: 33px;
+    top: -5px;
+  }
+  #sp5 {
+    width: 100px;
+    left: 49px;
+    position: relative;
+    top: -4px;
+  }
+  #eye2 {
+    position: relative;
+    top: -7px;
+    left: 60px;
+    width: 95px;
+  }
     .members__section2-img {
         width: 100%;
     }
@@ -108,4 +142,8 @@
         width: 162px;
         height: 50px;
     }
+}
+
+@media (min-width: 1502px) {
+
 }
